[package]
name = "sentinel-agent-ai-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-agent-ai-gateway"
homepage = "https://sentinel.raskell.io"
documentation = "https://sentinel.raskell.io/docs/agents/ai-gateway"
description = "AI Gateway agent for Sentinel reverse proxy - prompt filtering, PII detection, usage control"
keywords = ["proxy", "reverse-proxy", "agent", "ai", "llm", "gateway"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "sentinel_agent_ai_gateway"
path = "src/lib.rs"

[[bin]]
name = "sentinel-ai-gateway-agent"
path = "src/main.rs"

[dependencies]
# Sentinel protocol
sentinel-agent-protocol = "0.3"
sentinel-common = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pattern matching
regex = "1.10"

# JSON Schema validation
jsonschema = "0.18"

# Base64 decoding for body chunks
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
