[package]
name = "zentinel-agent-ai-gateway"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Zentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-ai-gateway"
homepage = "https://zentinelproxy.io"
documentation = "https://zentinelproxy.io/docs/agents/ai-gateway"
description = "AI Gateway agent for Zentinel reverse proxy - prompt filtering, PII detection, usage control"
keywords = ["zentinel", "proxy", "agent", "ai", "llm"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "zentinel_agent_ai_gateway"
path = "src/lib.rs"

[[bin]]
name = "zentinel-ai-gateway-agent"
path = "src/main.rs"

[dependencies]
# Zentinel protocol
zentinel-agent-protocol = "0.3"
zentinel-common = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# gRPC
tonic = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pattern matching
regex = "1.10"

# JSON Schema validation
jsonschema = "0.18"

# Base64 decoding for body chunks
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
